==> ARMmbed/DAPLink/source/hic_hal/nxp/lpc55xx/usbd_LPC55xx.c <==
#include "rl_usb.h"
#include "device.h"
#include "compiler.h"
#include "util.h"
#include "fsl_usb.h"
#include "usb_phy.h"
#include "fsl_clock.h"
#include "fsl_iocon.h"
#include "hic_init.h"
#define __NO_USB_LIB_C
#include "usb_config.c"
#define USBD_MAX_EPS (FSL_FEATURE_USBHSD_EP_NUM)
#define USB_IN_MASK         (0x80)
#define USB_LOGICAL_EP_MASK (0x7f)
#define EP_BUF_ACTIVE       (1UL << 31)
#define EP_DISABLED         (1UL << 30)
#define EP_STALL            (1UL << 29)
#define EP_TOGGLE_RESET     (1UL << 28)
#define EP_RF_TV            (1UL << 27)
#define EP_TYPE             (1UL << 26) // 0=generic, 1=periodic
#define EP_NBYTES_MASK      (0x03fff800)
#define EP_NBYTES_SHIFT     (11)
#define EP_BUF_OFFSET_MASK  (0x000007ff)
#define EP_BUF_OFFSET_SHIFT (0)
#define DEVCMDSTAT_SPEED_FULL (0x1)
#define DEVCMDSTAT_SPEED_HIGH (0x2)
#define MIN_BUF_SIZE        (64)
#define N_BYTES(n)         (((n) << EP_NBYTES_SHIFT) & EP_NBYTES_MASK)
#define BUF_ADDR(s_next_ep_buf_addr)     (((s_next_ep_buf_addr) >> 6) & EP_BUF_OFFSET_MASK)
#define EP_OUT_IDX(EPNum)  (EPNum * 2    )
#define EP_IN_IDX(EPNum)   (EPNum * 2 + 1)
#define EP_LIST_BASE       (0x40100000)
#define EP_BUF_BASE        (uint32_t)(EP_LIST_BASE + 0x100)
#define EP0_OUT_BUF_OFFSET      (0)
#define EP0_SETUP_BUF_OFFSET    (1)
#define EP0_IN_BUF_OFFSET       (2)
#define EP0_OUT_BUF_BASE        (EP0_OUT_BUF_OFFSET * USBD_MAX_PACKET0 + EP_BUF_BASE)

void USBD_Init(void)
{
    // Init clocks, HS PHY, and VBUS pin.
    hic_enable_usb_clocks();

    // Force clocks enabled.
    USBHSD->DEVCMDSTAT  |= USBHSD_DEVCMDSTAT_FORCE_NEEDCLK_MASK;

    // Setup EP
    USBHSD->DATABUFSTART = EP_BUF_BASE & 0xFFC00000;
    USBHSD->EPLISTSTART  = EP_LIST_BASE;

    NVIC_EnableIRQ(USB1_IRQn);
    USBD_Reset();
}

void USBD_Connect(BOOL con)
{
    if (con) {
        USBHSD->DEVCMDSTAT |= USBHSD_DEVCMDSTAT_DCON_MASK;    /* Set device connect status */
    } else {
        USBHSD->DEVCMDSTAT &= ~USBHSD_DEVCMDSTAT_DCON_MASK;   /* Clear device connect status */
    }

    return;
}

void USBD_Configure(BOOL cfg)
{
    s_next_ep_buf_addr = EP1_BUF_BASE;
}

void USBD_ConfigEP(USB_ENDPOINT_DESCRIPTOR *pEPD)
{
    uint32_t num, val, type;
    uint32_t *ptr;
    num  = pEPD->bEndpointAddress;
    val  = pEPD->wMaxPacketSize;
    type = pEPD->bmAttributes & USB_ENDPOINT_TYPE_MASK;

    /* IN EPs */
    if (num & USB_IN_MASK) {
        num &= ~USB_IN_MASK;
        EPBufInfo[EP_IN_IDX(num)].buf_len  = val;
        EPBufInfo[EP_IN_IDX(num)].buf_ptr  = s_next_ep_buf_addr;
        s_next_ep_buf_addr += ROUND_UP(val, MIN_BUF_SIZE);     /* calc new free buffer address */
        ptr  = GetEpCmdStatPtr(num | USB_IN_MASK);
        *ptr = EP_DISABLED;

        if (type == USB_ENDPOINT_TYPE_INTERRUPT) {
            *ptr |= EP_TYPE | EP_RF_TV;
        }
        else if (type == USB_ENDPOINT_TYPE_ISOCHRONOUS) {
            *ptr |= EP_TYPE;
        }
    }

    /* OUT EPs */
    else {
        EPBufInfo[EP_OUT_IDX(num)].buf_len  = val;
        EPBufInfo[EP_OUT_IDX(num)].buf_ptr  = s_next_ep_buf_addr;
        ptr  = GetEpCmdStatPtr(num);
        *ptr = N_BYTES(EPBufInfo[EP_OUT_IDX(num)].buf_len) |
               BUF_ADDR(EPBufInfo[EP_OUT_IDX(num)].buf_ptr) |
               EP_DISABLED;

        if (type == USB_ENDPOINT_TYPE_INTERRUPT) {
            *ptr |= EP_TYPE | EP_RF_TV;
        }
        else if (type == USB_ENDPOINT_TYPE_ISOCHRONOUS) {
            *ptr |= EP_TYPE;
        }

        s_next_ep_buf_addr += ROUND_UP(val, MIN_BUF_SIZE);     /* calc new free buffer address */
    }
}

void USBD_EnableEP(uint32_t EPNum)
{
    uint32_t *ptr;;
    ptr = GetEpCmdStatPtr(EPNum);

    /* IN EP */
    if (EPNum & USB_IN_MASK) {
        EPNum &= ~USB_IN_MASK;
        *ptr &= ~EP_DISABLED;
        USBHSD->INTSTAT = (1 << EP_IN_IDX(EPNum));
        USBHSD->INTEN  |= (1 << EP_IN_IDX(EPNum));
    }

    /* OUT EP */
    else {
        *ptr &= ~EP_DISABLED;
        *ptr |=  EP_BUF_ACTIVE;
        USBHSD->INTSTAT = (1 << EP_OUT_IDX(EPNum));
        USBHSD->INTEN  |= (1 << EP_OUT_IDX(EPNum));
    }
}

void USBD_DisableEP(uint32_t EPNum)
{
    uint32_t *ptr;
    ptr = GetEpCmdStatPtr(EPNum);
    *ptr = EP_DISABLED;

    if (EPNum & USB_IN_MASK) {
        EPNum &= ~USB_IN_MASK;
        USBHSD->INTEN &= ~(1 << EP_IN_IDX(EPNum));

    } else {
        USBHSD->INTEN &= ~(1 << EP_OUT_IDX(EPNum));
    }
}

void USBD_ResetEP(uint32_t EPNum)
{
    uint32_t *ptr;
    ptr = GetEpCmdStatPtr(EPNum);
    *ptr |= EP_TOGGLE_RESET;
}

void USBD_SetStallEP(uint32_t EPNum)
{
    uint32_t *ptr;
    ptr = GetEpCmdStatPtr(EPNum);

    if (EPNum & USB_LOGICAL_EP_MASK) {
        if (*ptr & EP_BUF_ACTIVE) {
            *ptr &= ~(EP_BUF_ACTIVE);
        }

    } else {
        if (EPNum & USB_IN_MASK) {
            EPNum &= ~USB_IN_MASK;
            USBHSD->EPSKIP |= (1 << EP_IN_IDX(EPNum));

            while (USBHSD->EPSKIP & (1 << EP_IN_IDX(EPNum)));

        } else {
            USBHSD->EPSKIP |= (1 << EP_OUT_IDX(EPNum));

            while (USBHSD->EPSKIP & (1 << EP_OUT_IDX(EPNum)));
        }
    }

    if ((EPNum & USB_LOGICAL_EP_MASK) == 0) {
        /* Endpoint is stalled so control out won't be next */
        s_read_ctrl_out_next = 0;
    }

    *ptr |=  EP_STALL;
}

void USBD_ClrStallEP(uint32_t EPNum)
{
    uint32_t *ptr;
    ptr = GetEpCmdStatPtr(EPNum);

    if (EPNum & USB_IN_MASK) {
        *ptr &=  ~EP_STALL;

    } else {
        *ptr &=  ~EP_STALL;
        *ptr |=   EP_BUF_ACTIVE;
    }

    USBD_ResetEP(EPNum);
}

uint32_t USBD_ReadEP(uint32_t EPNum, uint8_t *pData, uint32_t size)
{
    uint32_t cnt, i;//, xfer_size;
    volatile uint32_t *ptr;
    uint8_t *dataptr;
    ptr = GetEpCmdStatPtr(EPNum);
    int timeout = 256;

    /* Setup packet */
    if ((EPNum == 0) && !s_read_ctrl_out_next && (USBHSD->DEVCMDSTAT & USBHSD_DEVCMDSTAT_SETUP_MASK)) {
        cnt = sizeof(USB_SETUP_PACKET);

        if (size < cnt) {
            util_assert(0);
            cnt = size;
        }

        dataptr = (uint8_t *)(EPBufInfo[EP_OUT_IDX(EPNum)].buf_ptr + EP0_SETUP_BUF_OFFSET * USBD_MAX_PACKET0);
        memcpy(pData, dataptr, cnt);

        // Copy the SETUP packet into a struct we can read from more understandably.
        USB_SETUP_PACKET setup;
        memcpy(&setup, pData, sizeof(setup));

        if ((setup.wLength > 0) && setup.bmRequestType.Dir) {
            /* This control transfer has a data IN stage            */
            /* and ends with a zero length data OUT transfer.       */
            /* Ensure the data OUT token is not skipped even if     */
            /* a SETUP token arrives before USBD_ReadEP has         */
            /* been called.                                         */
            s_read_ctrl_out_next = 1;
        }

        USBHSD->EPSKIP |= (1 << EP_IN_IDX(EPNum));

        while (USBHSD->EPSKIP & (1 << EP_IN_IDX(EPNum)));

        // Clear stall on EP0 IN.
        if (*(ptr + 2) & EP_STALL) {
            *(ptr + 2) &= ~(EP_STALL);
        }

        // Clear stall on EP0 OUT.
        if (*ptr & EP_STALL) {
            *ptr &= ~(EP_STALL);
        }

        USBHSD->DEVCMDSTAT |= USBHSD_DEVCMDSTAT_SETUP_MASK;
    }

    /* OUT packet */
    else {
        ptr = GetEpCmdStatPtr(EPNum);
        cnt = EPBufInfo[EP_OUT_IDX(EPNum)].buf_len - ((*ptr & EP_NBYTES_MASK) >> EP_NBYTES_SHIFT);
        dataptr = (uint8_t *)EPBufInfo[EP_OUT_IDX(EPNum)].buf_ptr;

        while ((timeout-- > 0) && (*ptr & EP_BUF_ACTIVE)); //spin on the hardware until it's done
        util_assert(!(*ptr & EP_BUF_ACTIVE)); //check for timeout

        if (size < cnt) {
            util_assert(0);
            cnt = size;
        }

        cnt = MIN(cnt, size);

        memcpy(pData, dataptr, cnt);

        *ptr = (*ptr & (EP_TYPE | EP_RF_TV)) |
               N_BYTES(EPBufInfo[EP_OUT_IDX(EPNum)].buf_len) |
               BUF_ADDR(EPBufInfo[EP_OUT_IDX(EPNum)].buf_ptr) |
               EP_BUF_ACTIVE;

        if (EPNum == 0) {
            /* If s_read_ctrl_out_next is set then this should be a zero length        */
            /* data OUT packet.                                                 */
            util_assert(!s_read_ctrl_out_next || (cnt == 0));
            s_read_ctrl_out_next = 0;
            if (USBHSD->DEVCMDSTAT & USBHSD_DEVCMDSTAT_SETUP_MASK)  {
                // A setup packet is still pending so trigger another interrupt
                USBHSD->INTSETSTAT |= USBHSD_INTSETSTAT_EP_SET_INT(0);
            }
        }
    }

    return (cnt);
}

uint32_t USBD_WriteEP(uint32_t EPNum, uint8_t *pData, uint32_t cnt)
{
    uint32_t i;
    volatile uint32_t *ptr;
    uint32_t *dataptr;
    ptr = GetEpCmdStatPtr(EPNum);
    EPNum &= ~USB_IN_MASK;

    while (*ptr & EP_BUF_ACTIVE);

    uint32_t cmdstat = *ptr;
    cmdstat &= ~(EP_NBYTES_MASK | EP_BUF_OFFSET_MASK);
    cmdstat |=  BUF_ADDR(EPBufInfo[EP_IN_IDX(EPNum)].buf_ptr) | N_BYTES(cnt);
    *ptr = cmdstat;

    dataptr = (uint32_t *)EPBufInfo[EP_IN_IDX(EPNum)].buf_ptr;
    memcpy(dataptr, pData, cnt);

    if (EPNum && (*ptr & EP_STALL)) {
        return (0);
    }

    *ptr |= EP_BUF_ACTIVE;
    return (cnt);
}

void USBD_Handler(void)
{
    uint32_t sts, val, num, i;
    sts = USBHSD->INTSTAT;
    USBHSD->INTSTAT = sts;

    /* Device Status Interrupt (Reset, Connect change, Suspend/Resume) */
    if (sts & USBHSD_INTSTAT_DEV_INT_MASK) {
        val = USBHSD->DEVCMDSTAT;

        /* reset interrupt */
        if (val & USBHSD_DEVCMDSTAT_DRES_C_MASK) {
            USBHSD->DEVCMDSTAT |= USBHSD_DEVCMDSTAT_DRES_C_MASK;
            USBD_Reset();
            usbd_reset_core();
#ifdef __RTX

            if (USBD_RTX_DevTask) {
                isr_evt_set(USBD_EVT_RESET, USBD_RTX_DevTask);
            }

#else

            if (USBD_P_Reset_Event) {
                USBD_P_Reset_Event();
            }

#endif
        }

        /* connect interrupt */
        if (val & USBHSD_DEVCMDSTAT_DCON_C_MASK) {
            USBHSD->DEVCMDSTAT |= USBHSD_DEVCMDSTAT_DCON_C_MASK;
#ifdef __RTX

            if (USBD_RTX_DevTask) {
                if (val & USBHSD_DEVCMDSTAT_DCON_MASK) {
                    isr_evt_set(USBD_EVT_POWER_ON,  USBD_RTX_DevTask);
                } else {
                    isr_evt_set(USBD_EVT_POWER_OFF, USBD_RTX_DevTask);
                }
            }

#else

            if (USBD_P_Power_Event) {
                USBD_P_Power_Event((val & USBHSD_DEVCMDSTAT_DCON_MASK) >> USBHSD_DEVCMDSTAT_DCON_SHIFT);
            }

#endif
        }

        /* suspend/resume interrupt */
        if (val & USBHSD_DEVCMDSTAT_DSUS_C_MASK) {
            USBHSD->DEVCMDSTAT |= USBHSD_DEVCMDSTAT_DSUS_C_MASK;

            /* suspend interrupt */
            if (val & USBHSD_DEVCMDSTAT_DSUS_MASK) {
                USBD_Suspend();
#ifdef __RTX

                if (USBD_RTX_DevTask) {
                    isr_evt_set(USBD_EVT_SUSPEND, USBD_RTX_DevTask);
                }

#else

                if (USBD_P_Suspend_Event) {
                    USBD_P_Suspend_Event();
                }

#endif
            }

            /* resume interrupt */
            else {
#ifdef __RTX

                if (USBD_RTX_DevTask) {
                    isr_evt_set(USBD_EVT_RESUME,  USBD_RTX_DevTask);
                }

#else

                if (USBD_P_Resume_Event) {
                    USBD_P_Resume_Event();
                }

#endif
            }
        }
    }

    /* Start of Frame */
    if (sts & USBHSD_INTSTAT_FRAME_INT_MASK) {
#ifdef __RTX

        if (USBD_RTX_DevTask) {
            isr_evt_set(USBD_EVT_SOF, USBD_RTX_DevTask);
        }

#else

        if (USBD_P_SOF_Event) {
            USBD_P_SOF_Event();
        }

#endif
    }

    /* EndPoint Interrupt */
    if (sts & USBHSD_INTEN_EP_INT_EN_MASK) {
        const uint32_t endpoint_count = ((USBD_EP_NUM + 1) * 2);

        for (i = 0; i < endpoint_count; i++) {
            // Iterate through endpoints in the reverse order so IN endpoints
            // get processed before OUT endpoints if they are both pending.
            num = endpoint_count - i - 1;

            if (sts & (1UL << num)) {
                /* Setup */
                if ((num == 0) && !s_read_ctrl_out_next && (USBHSD->DEVCMDSTAT & USBHSD_DEVCMDSTAT_SETUP_MASK)) {
#ifdef __RTX

                    if (USBD_RTX_EPTask[num / 2]) {
                        isr_evt_set(USBD_EVT_SETUP, USBD_RTX_EPTask[num / 2]);
                    }

#else

                    if (USBD_P_EP[num / 2]) {
                        USBD_P_EP[num / 2](USBD_EVT_SETUP);
                    }

#endif
                }

                /* OUT */
                else if ((num % 2) == 0) {
#ifdef __RTX

                    if (USBD_RTX_EPTask[num / 2]) {
                        isr_evt_set(USBD_EVT_OUT, USBD_RTX_EPTask[num / 2]);
                    }

#else

                    if (USBD_P_EP[num / 2]) {
                        USBD_P_EP[num / 2](USBD_EVT_OUT);
                    }

#endif
                }

                /* IN */
                else {
#ifdef __RTX

                    if (USBD_RTX_EPTask[num / 2]) {
                        isr_evt_set(USBD_EVT_IN,  USBD_RTX_EPTask[num / 2]);
                    }

#else

                    if (USBD_P_EP[num / 2]) {
                        USBD_P_EP[num / 2](USBD_EVT_IN);
                    }

#endif
                }
            }
        }
    }

    NVIC_EnableIRQ(USB1_IRQn);
}
