==> ARMmbed/DAPLink/source/hic_hal/maxim/max32620/usbd_max32620.c <==
#include <string.h>
#include "rl_usb.h"
#include "util.h"
#include "max32620.h"
#include "usb_regs.h"
#include "clkman_regs.h"
#include "pwrman_regs.h"
#include "tmr_regs.h"
#define __NO_USB_LIB_C
#include "usb_config.c"
#define EPNUM_MASK  (~USB_ENDPOINT_DIRECTION_MASK)
#define INIT_INTS     (MXC_F_USB_DEV_INTEN_BRST | MXC_F_USB_DEV_INTFL_BRST_DN | MXC_F_USB_DEV_INTEN_VBUS | MXC_F_USB_DEV_INTFL_NO_VBUS)
#define CONNECT_INTS  (MXC_F_USB_DEV_INTEN_SETUP | MXC_F_USB_DEV_INTEN_EP_IN | MXC_F_USB_DEV_INTEN_EP_OUT | MXC_F_USB_DEV_INTEN_DMA_ERR)

void USBD_Init (void)
{
	uint32_t reg;

	/* Enable USB power domain */
	MXC_PWRMAN->pwr_rst_ctrl |= MXC_F_PWRMAN_PWR_RST_CTRL_USB_POWERED;
  /* Setup the USB clocking, select  */
  MXC_CLKMAN->clk_ctrl |= MXC_F_CLKMAN_CLK_CTRL_USB_CLOCK_ENABLE;
	/* Force USB clock gater */
	reg = MXC_CLKMAN->clk_gate_ctrl0;
	reg &= ~MXC_F_CLKMAN_CLK_GATE_CTRL0_USB_CLK_GATER;
	reg |= (0x2 << MXC_F_CLKMAN_CLK_GATE_CTRL0_USB_CLK_GATER_POS);
	MXC_CLKMAN->clk_gate_ctrl0 = reg;

  MXC_USB->cn = 0;
  MXC_USB->cn = MXC_F_USB_CN_USB_EN;
  MXC_USB->dev_inten = 0;
  MXC_USB->dev_intfl = 0xFFFF;  // clear interrupts
  MXC_USB->dev_cn = 0;
  MXC_USB->dev_cn |= MXC_F_USB_DEV_CN_URST;
  MXC_USB->dev_cn = 0;

  reset_state();

  /* set the descriptor location */
  MXC_USB->ep_base = (uint32_t)&ep_buffer_descriptor;

  /* enable some interrupts */
  MXC_USB->dev_inten = INIT_INTS;
  NVIC_EnableIRQ(USB_IRQn);
}

void USBD_Connect (BOOL con)
{
  if (con) {
    MXC_USB->dev_intfl = 0xFFFF;  // clear interrupts
    MXC_USB->dev_inten |= CONNECT_INTS;
    MXC_USB->ep[0] |= MXC_F_USB_EP_INT_EN;
    MXC_USB->dev_cn |= (MXC_F_USB_DEV_CN_CONNECT | MXC_F_USB_DEV_CN_FIFO_MODE);
  } else {
    MXC_USB->dev_inten &= ~CONNECT_INTS;
    MXC_USB->ep[0] &= ~MXC_F_USB_EP_INT_EN;
    MXC_USB->dev_cn &= ~MXC_F_USB_DEV_CN_CONNECT;
  }
}

void USBD_Configure (BOOL cfg)
{
#if CDC_ENDPOINT
    /* CDC-ACM class processes FIFOs in the SOF interrupt. The USB Device interface
     * of Maxim's microcontrollers does not provide and SOF interrupt. A periodic
     * timer interrupt is used instead.
     */

    #define SOF_INT_US  1000

    if (cfg) {
        // Setup timer interrupt for SOF
        MXC_TMR0->ctrl = MXC_S_TMR_CTRL_MODE_CONTINUOUS;
        MXC_TMR0->count32 = 0;
        MXC_TMR0->term_cnt32 = (SystemCoreClock / 1000000) * SOF_INT_US;

        // Enable the interrupt
        MXC_TMR0->intfl = MXC_TMR0->intfl;
        NVIC_EnableIRQ(TMR0_0_IRQn);
        MXC_TMR0->inten = MXC_F_TMR_INTEN_TIMER0;

        // Start the timer
        MXC_TMR0->ctrl |= MXC_F_TMR_CTRL_ENABLE0;

    } else {
        // Disable tmr
        MXC_TMR0->ctrl &= ~(MXC_F_TMR_CTRL_ENABLE0);
    }
#endif
}

void USBD_ConfigEP (USB_ENDPOINT_DESCRIPTOR *pEPD)
{
  U32 EPNum;

  EPNum = pEPD->bEndpointAddress & EPNUM_MASK;

  if (EPNum < MXC_USB_NUM_EP) {

    // Clear existing configurations
    MXC_USB->ep[EPNum] = MXC_F_USB_EP_DT;

    if (pEPD->bEndpointAddress & USB_ENDPOINT_DIRECTION_MASK) {
      ep_info[EPNum].type = MXC_S_USB_EP_DIR_IN;
    } else {
      ep_info[EPNum].type = MXC_S_USB_EP_DIR_OUT;
    }

    ep_info[EPNum].len = pEPD->wMaxPacketSize;
  }
}

void USBD_EnableEP (U32 EPNum)
{
  ep_buffer_t *desc = get_desc(EPNum);

  EPNum &= EPNUM_MASK;
  MXC_USB->ep[EPNum] |= (MXC_F_USB_EP_INT_EN | ep_info[EPNum].type | MXC_F_USB_EP_DT);

  if (ep_info[EPNum].type == MXC_S_USB_EP_DIR_OUT) {
    // This is an OUT endpoint. Go ahead and register a request.
    desc = get_desc(EPNum);
    desc->buf0_address = (uint32_t)ep_buffer[EPNum];
    desc->buf0_desc = sizeof(ep_buffer[EPNum]);
    MXC_USB->out_owner = (1 << EPNum);
  }
}

void USBD_DisableEP (U32 EPNum)
{
  EPNum &= EPNUM_MASK;
  MXC_USB->ep[EPNum] = 0;
}

void USBD_ResetEP (U32 EPNum)
{
  ep_buffer_t *desc = get_desc(EPNum);

  EPNum &= EPNUM_MASK;
  MXC_USB->ep[EPNum] |= MXC_F_USB_EP_DT;

  if (ep_info[EPNum].type == MXC_S_USB_EP_DIR_OUT) {
    // This is an OUT endpoint. Go ahead and register a request.
    desc = get_desc(EPNum);
    desc->buf0_address = (uint32_t)ep_buffer[EPNum];
    desc->buf0_desc = sizeof(ep_buffer[EPNum]);
    MXC_USB->out_owner = (1 << EPNum);
  }
}

void USBD_SetStallEP (U32 EPNum)
{
  EPNum &= EPNUM_MASK;

  if (EPNum == 0) {
    MXC_USB->ep[0] |= (MXC_F_USB_EP_ST_STALL | MXC_F_USB_EP_STALL);
  } else {
    MXC_USB->ep[EPNum] |= MXC_F_USB_EP_STALL;
  }
}

void USBD_ClrStallEP (U32 EPNum)
{
  USBD_ResetEP(EPNum);
  MXC_USB->ep[EPNum & EPNUM_MASK] &= ~MXC_F_USB_EP_STALL;
}

U32 USBD_ReadEP (U32 EPNum, U8 *pData, U32 size)
{
    U32 cnt;
  ep_buffer_t *desc = get_desc(EPNum);
  USB_SETUP_PACKET *sup;

  EPNum &= EPNUM_MASK;

  if ((EPNum == 0) && setup_waiting) {
    cnt = sizeof(USB_SETUP_PACKET);

    if (size < cnt) {
      util_assert(0);
      return 0;
    }
    setup_waiting = 0;
    ((U32 *)pData)[0] = MXC_USB->setup0;
    ((U32 *)pData)[1] = MXC_USB->setup1;
    sup = (USB_SETUP_PACKET*)pData;

    if ( (sup->bmRequestType.Dir == REQUEST_HOST_TO_DEVICE) && (sup->wLength > 0) ) {
      // There is an OUT stage for this setup packet. Register a request.
      if (!(MXC_USB->out_owner & 1)) {
        desc = &ep_buffer_descriptor.ep0.out_buffer;
        desc->buf0_address = (uint32_t)ep_buffer[0];
        desc->buf0_desc = sup->wLength;
        MXC_USB->out_owner = 1;
      }
    }
  } else {
    cnt = desc->buf0_desc;

        if (size < cnt) {
            cnt = size;
        }
    memcpy(pData, ep_buffer[EPNum], cnt);

    // Register the next request.
    desc->buf0_address = (uint32_t)ep_buffer[EPNum];
    desc->buf0_desc = sizeof(ep_buffer[EPNum]);
    MXC_USB->out_owner = (1 << EPNum);
  }

  return cnt;
}

U32 USBD_WriteEP (U32 EPNum, U8 *pData, U32 cnt)
{
  ep_buffer_t *desc = get_desc(EPNum);
  uint32_t mask;

  EPNum &= EPNUM_MASK;
  mask = (1 << EPNum);

  if (MXC_USB->in_owner & mask) {
    return 0;
  }

  if (EPNum == 0) {
    // Prepare to ACK the status stage.
    MXC_USB->ep[0] |= MXC_F_USB_EP_ST_ACK;

    if ((cnt == 0) && !ep0_expect_zlp) {
      // This is a status stage ACK. Handled in hardware.
      return 0;
    } else if (cnt == USBD_MAX_PACKET0) {
      ep0_expect_zlp = 1;
    } else {
      ep0_expect_zlp = 0;
    }
  }

  if (cnt > MXC_USB_MAX_PACKET) {
    cnt = MXC_USB_MAX_PACKET;
  }

  /* prepare data to be sent */
  memcpy(ep_buffer[EPNum], pData, cnt);
  desc->buf0_address = (uint32_t)ep_buffer[EPNum];
  desc->buf0_desc = cnt;

  /* start the transaction */
  MXC_USB->in_owner = mask;

  return cnt;
}

void USBD_Handler(void)
{

#ifdef __RTX
  while(1) {}
#else

#endif

  uint32_t irq_flags;
  unsigned int ep;
  uint32_t ep_int, mask;

  // Read and clear interrupts
  irq_flags = MXC_USB->dev_intfl;
  MXC_USB->dev_intfl = irq_flags;

  /* reset interrupt */
  if (irq_flags & MXC_F_USB_DEV_INTFL_BRST) {
    if (suspended) {
      suspended = 0;
#ifdef __RTX
      if (USBD_RTX_DevTask) { isr_evt_set(USBD_EVT_RESUME, USBD_RTX_DevTask); }
#else
      if (USBD_P_Resume_Event) { USBD_P_Resume_Event(); }
#endif
    }

    reset_state();
    usbd_reset_core();

#ifdef __RTX
    if (USBD_RTX_DevTask) { isr_evt_set(USBD_EVT_RESET, USBD_RTX_DevTask); }
#else
    if (USBD_P_Reset_Event) { USBD_P_Reset_Event(); }
#endif

  }

  /* reset done interrupt */
  if (irq_flags & MXC_F_USB_DEV_INTFL_BRST_DN) {
    reset_state();
  }

  /* suspend interrupt */
  if (irq_flags & MXC_F_USB_DEV_INTFL_SUSP) {
    suspended = 1;
#ifdef __RTX
    if (USBD_RTX_DevTask) { isr_evt_set(USBD_EVT_SUSPEND, USBD_RTX_DevTask); }
#else
    if (USBD_P_Suspend_Event) { USBD_P_Suspend_Event(); }
#endif
  }

  if (irq_flags & MXC_F_USB_DEV_INTFL_VBUS) {
#ifdef __RTX
    if (USBD_RTX_DevTask) { isr_evt_set(USBD_EVT_POWER_ON,  USBD_RTX_DevTask); }
#else
    if (USBD_P_Power_Event) { USBD_P_Power_Event(1); }
#endif
  }

  if (irq_flags & MXC_F_USB_DEV_INTFL_NO_VBUS) {
#ifdef __RTX
    if (USBD_RTX_DevTask) { isr_evt_set(USBD_EVT_POWER_OFF, USBD_RTX_DevTask); }
#else
    if (USBD_P_Power_Event) { USBD_P_Power_Event(0); }
#endif
  }

  if (irq_flags & MXC_F_USB_DEV_INTFL_SETUP) {
    setup_waiting = 1;
#ifdef __RTX
    if (USBD_RTX_EPTask[0]) { isr_evt_set(USBD_EVT_SETUP, USBD_RTX_EPTask[0]); }
#else
    if (USBD_P_EP[0]) { USBD_P_EP[0](USBD_EVT_SETUP); }
#endif
  }

  if (irq_flags & MXC_F_USB_DEV_INTFL_EP_IN) {

    // Read and clear endpoint interrupts
    ep_int = MXC_USB->in_int;
    MXC_USB->in_int = ep_int;

    mask = 1;
    for (ep = 0; ep < MXC_USB_NUM_EP; ep++) {
      if (ep_int & mask) {
#ifdef __RTX
        if (USBD_RTX_EPTask[ep]) { isr_evt_set(USBD_EVT_IN,  USBD_RTX_EPTask[ep]); }
#else
        if (USBD_P_EP[ep]) { USBD_P_EP[ep](USBD_EVT_IN); }
#endif
      }

      mask <<= 1;
    }
  }

  if (irq_flags & MXC_F_USB_DEV_INTFL_EP_OUT) {

    // Read and clear endpoint interrupts
    ep_int = MXC_USB->out_int;
    MXC_USB->out_int = ep_int;

    mask = 1;
    for (ep = 0; ep < MXC_USB_NUM_EP; ep++) {
      if (ep_int & mask) {
#ifdef __RTX
        if (USBD_RTX_EPTask[ep]) { isr_evt_set(USBD_EVT_OUT, USBD_RTX_EPTask[ep]); }
#else
        if (USBD_P_EP[ep]) { USBD_P_EP[ep](USBD_EVT_OUT); }
#endif
      }

      mask <<= 1;
    }
  }

  if (irq_flags & MXC_F_USB_DEV_INTFL_DMA_ERR) {
    // Read and clear endpoint interrupts
    ep_int = MXC_USB->dma_err_int;
    MXC_USB->dma_err_int = ep_int;
    while(1); // not recoverable
  }

  NVIC_EnableIRQ(USB_IRQn);

}
